style.css
@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@1,900&family=Oswald:wght@600&display=swap');

body{
    background-color: black;
}

footer{
    background-color: #2a321e;
    padding: 5px;
}

.flex-container{
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
  }

img {
    opacity: 0.6;
}

img:hover, img:active {
    animation: fadeIn 0.5s;
    opacity: 1;
    background: #80A34D;
    box-shadow: 0 0 5px #80A34D, 0 0 50px #80A34D, 0 0 50px #80A34D, 0 0 200px #80A34D;
}

.sideinfo img {width: 310px;}

h1 {
    color: white;
    text-align: center;
    font-family: 'Barlow', sans-serif;
}

p { 
    color: rgb(176, 176, 176);
    font-family: 'Oswald', sans-serif;
    padding: 10px;
    text-align: center;
}

.container {
    margin-left: 50px;
    margin-top: 10px;
    
}

.embed-responsive {
	position: realtive;
	display: block;
	width: 100%;
	padding: 0;
	overflow: hidden;
	&::before {
		padding-top: 50%;
		display: block; 
		content: "";
		box-sizing: border-box;}}

	iframe {
		position: absolute;
		top: 150px;
		bottom: 0;
		left: 50px;
        width: 70%;
		height: 70%;
		border: 0;}


.sideinfo{
    height: 100%;
    width: 350px;
    position: fixed;
    top: 0;
    right: 35px;
    background-color: #1f231b;
    overflow-x: hidden;
  }

  @media only screen and (max-width: 1100px) {
    .container {width: auto; height: auto; margin-left: 30px; margin-right: 500px;}
    .sideinfo {width: 200px; right: 0px}
    .sideinfo img {width: 160px;}
    .blogMW, .blogW2, .WZxbox, .WZbattlenet, .WZsteam{padding:5px;}
    .purchaseMW2 {width:auto;}
    .WZxbox, .WZbattlenet, .WZsteam {font-size: 5px;}
  }

.purchaseMW {
    width: 315px;
    opacity: 0.5;
    background: #80A34D;
    box-shadow: 0 0 5px #80A34D;
}

.blogMW, .blogW2 {
    color:rgb(176, 176, 176);
    padding: 40px;
    align-content: center;
    background-color: #43532a;
    font-family: 'Barlow', sans-serif;
}

.WZxbox, .WZbattlenet, .WZsteam {
    color:rgb(176, 176, 176);
    padding: 20px;
    border-width: 100%;
    background-color: #43532a;
    font-family: 'Barlow', sans-serif;
    font-size: 20px;
}

.blogMW:hover, .blogW2:hover, .WZxbox:hover, .WZbattlenet:hover, .WZsteam:hover  {
    animation: fadeIn 0.5s;
    opacity: 1;
    color:rgb(32, 28, 28);
    background: #b5cf8f;
    box-shadow: 0 0 5px #80A34D, 0 0 50px #80A34D, 0 0 50px #80A34D, 0 0 200px #80A34D;
}

.WZdownloads{
    text-align: center;
}

@keyframes fadeIn {
    0% { opacity: 0.5; }
    100% { opacity: 1; }
  }

